log/build_2020-11-23_16-11-18/py_pubsub/stderr.log
  File "/home/iic/conversion/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/subscriber_member_function.py", line 44
    elif msg.encoding == "rgb8" or msg.encoding == "rgba8:
                                                         ^
SyntaxError: EOL while scanning string literal

